@@ -1,3 +1,15 @@
+2008-02-22  Dan Nicolaescu  <dann@ics.uci.edu>
+
+	* vc.el (vc-exec-after): Move setting mode-line-process in the
+	busy case ...
+	(vc-set-mode-line-busy-indicator): ... in this new function.
+	(vc-status-refresh): Call vc-set-mode-line-busy-indicator.
+	(vc-update-vc-status-buffer): Reset mode-line-process.
+	(vc-status-mark-all-files, vc-status-unmark-all-files): Change to
+	mark/unmark all the files with the same state as the current one.
+        With a prefix argument mark/unmark all files.
+	(vc-status-mode-menu): Adjust strings.
+
 2008-02-22  Glenn Morris  <rgm@gnu.org>
 
 	* json.el (top-level): No need to require thingatpt.
